--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "ramda": "0.26.1",
     "react": "16.8.3",
     "react-dom": "16.8.3",
-    "react-scripts": "2.0.3"
+    "react-scripts": "2.0.3",
+    "uuid": "3.3.2"
   },
   "devDependencies": {},
   "scripts": {
